--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
@@ -7,13 +7,11 @@ Description: AkibaRika site theme.
 Version: 3.0
 License: CC BY-NC-SA 4.0
 */
-
 //////////////////// Setup ////////////////////
 //
 @import "reset/normalize";
 @import "mixins";
 @import "scaffold";
-
 //////////////////// Component ////////////////////
 //
 @import "component/variables";
@@ -22,7 +20,6 @@ License: CC BY-NC-SA 4.0
 @import "component/form";
 @import "component/button";
 @import "component/variables";
-
 //////////////////// Start ////////////////////
 //
 @import "module/header";
@@ -33,4 +30,5 @@ License: CC BY-NC-SA 4.0
 @import "content";
 @import "comment";
 @import "music";
+@import "bookmark";
 @import "style";
