--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
@@ -10,8 +10,8 @@ License: CC BY-NC-SA 4.0
 //////////////////// Setup ////////////////////
 //
 @import "reset/normalize";
-@import "mixins";
-@import "scaffold";
+@import "mixins/mixins";
+@import "component/scaffold";
 //////////////////// Component ////////////////////
 //
 @import "component/variables";
@@ -20,15 +20,16 @@ License: CC BY-NC-SA 4.0
 @import "component/form";
 @import "component/button";
 @import "component/variables";
+@import "component/keyframes";
 //////////////////// Start ////////////////////
 //
 @import "module/header";
 @import "module/footer";
 @import "module/menu";
-@import "keyframes";
-@import "share";
-@import "content";
-@import "comment";
-@import "music";
-@import "bookmark";
+@import "module/nav";
+@import "module/content";
+@import "module/comment";
+@import "page/share";
+@import "page/music";
+@import "page/bookmark";
 @import "style";
