--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/component/button.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/component/button.less
@@ -17,7 +17,7 @@ button {
   border             : 0;
   user-select        : none;
   width              : 100%;
-  .transition(all 0.2s ease);
+  transition         : all 0.2s ease;
   &:hover,
   &:focus {
     outline         : 0;
