--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/component/icons.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/component/icons.less
@@ -34,140 +34,21 @@
 }
 
 @font-face {
-  font-family : 'icomoon';
-  src         : url('../fonts/icomoon.eot?-g2qgrj');
-  src         : url('../fonts/icomoon.eot?#iefix-g2qgrj') format('embedded-opentype'),
-  url('../fonts/icomoon.woff?-g2qgrj') format('woff'),
-  url('../fonts/icomoon.ttf?-g2qgrj') format('truetype'),
-  url('../fonts/icomoon.svg?-g2qgrj#icomoon') format('svg');
-  font-weight : normal;
-  font-style  : normal;
-}
-
-@font-face {
   font-family : "fx";
   src         : url('../fonts/neteasemusic.eot');
   src         : url('../fonts/neteasemusic.eot?#iefix') format('embedded-opentype'), url('../fonts/neteasemusic.woff') format('woff'), url('../fonts/neteasemusic.ttf') format('truetype'), url('../fonts/neteasemusic.svg#fx') format('svg')
 }
 
-[class^="icon-"], [class*=" icon-"] {
-  font-family             : 'icomoon';
-  speak                   : none;
-  font-style              : normal;
-  font-weight             : normal;
-  font-variant            : normal;
-  text-transform          : none;
-  line-height             : 1;
-
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing  : antialiased;
-  -moz-osx-font-smoothing : grayscale;
+.icon {
+  display      : inline-block;
+  width        : 100%;
+  height       : 31px;
+  stroke-width : 0;
+  stroke       : currentColor;
+  fill         : currentColor;
+  transition   : all .3s ease-out;
 }
 
-.icon-angle-up:before {
-  content : "\f106";
-}
-
-.icon-angle-down:before {
-  content : "\f107";
-}
-
-.icon-foursquare:before {
-  content : "\f180";
-}
-
-.icon-weibo:before {
-  content : "\f18a";
-}
-
-.icon-user:before {
-  content : "\e603";
-}
-
-.icon-screen:before {
-  content : "\f108";
-}
-
-.icon-mail:before {
-  content : "\e603";
-}
-
-.icon-link:before {
-  content : "\f0c1";
-}
-
-.icon-search:before {
-  content : "\e986";
-}
-
-.icon-paint-brush:before {
-  content : "\f1fc";
-}
-
-.icon-folder-open:before {
-  content : "\f115";
-}
-
-.icon-tags:before {
-  content : "\e602";
-}
-
-.icon-redo:before {
-  content : "\e608";
-}
-
-.icon-bubbles:before {
-  content : "\e600";
-}
-
-.icon-cc:before {
-  content : "\f20a";
-}
-
-.icon-plus:before {
-  content : "\e60b";
-}
-
-.icon-code:before {
-  content : "\f120";
-}
-
-.icon-share:before {
-  content : "\e601";
-}
-
-.icon-googleplus:before {
-  content : "\ea89";
-}
-
-.icon-instagram:before {
-  content : "\ea90";
-}
-
-.icon-twitter:before {
-  content : "\ea91";
-}
-
-.icon-flickr:before {
-  content : "\eaa2";
-}
-
-.icon-th:before {
-  content : "\f00a";
-}
-
-.icon-th-list:before {
-  content : "\f00b";
-}
-
-.icon-inbox:before {
-  content : "\f01c";
-}
-
-.icon-facebook:before {
-  content : "\f09a";
-}
-
-.icon-google-plus:before {
-  content : "\f0d5";
+.icon-twitter {
+  //width : 0.9285703301429749em;
 }
