--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/component/scaffold.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/component/scaffold.less
@@ -23,11 +23,6 @@ h3 {
   font-size   : 1.5em;
   line-height : 1.3;
 }
-
-svg {
-  display : none;
-}
-
 .cb {
   -moz-box-sizing    : content-box;
   -webkit-box-sizing : content-box;
@@ -111,7 +106,7 @@ pre {
 }
 
 [class^="icon-"] {
-  .transition(all .3s ease-in-out);
+  transition: all .3s ease-in-out;
 }
 
 .clearfix {
