--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/module/comment.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/module/comment.less
@@ -37,7 +37,7 @@
               text-shadow      : 1px 1px rgba(0, 0, 0, 0.2);
               vertical-align   : middle;
               width            : 100%;
-              .transition(opacity .3s ease-in-out);
+              transition       : opacity .3s ease-in-out;
               &:hover {
                 opacity : 1;
               }
@@ -99,7 +99,7 @@
       vertical-align   : middle;
       width            : auto;
       .user-select(none);
-      .transition(all .2s ease);
+      transition       : all .2s ease;
       &.dots {
         cursor : default;
       }
