--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/module/header.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/module/header.less
@@ -93,9 +93,9 @@
           padding          : 0 15px;
           color            : #313131;
           background-color : #f6f6f6;
-          .transition(all .25s ease-out);
-          i {
-            .display-none;
+          transition       : all .25s ease-out;
+          svg.icon {
+            display : none;
           }
           &:hover {
             background-color : #f4f4f4;
@@ -122,7 +122,7 @@
             color            : @white-color;
             line-height      : 65px;
             text-transform   : initial;
-            .transition(all .3s ease-in-out);
+            transition       : all .3s ease-in-out;
           }
         }
         &.search {
@@ -135,20 +135,15 @@
             height     : 66px;
             background : #343434;
             cursor     : pointer;
-            .transition(all .25s ease-out);
-            .icon-search::before {
-              position    : absolute;
-              top         : 50%;
-              left        : 50%;
-              width       : 18px;
-              height      : 18px;
-              margin      : -10px 0 0 -10px;
-              text-align  : center;
-              font-size   : 18px;
-              display     : block;
-              text-indent : 0;
-              color       : @white-color;
-              line-height : 20px;
+            transition : all .25s ease-out;
+            svg.icon {
+              color    : white;
+              position : absolute;
+              top      : 50%;
+              left     : 50%;
+              width    : 20px;
+              height   : 20px;
+              margin   : -10px 0 0 -10px;
             }
             &:hover {
               opacity : .75;
@@ -165,7 +160,7 @@
       width      : 252px;
       height     : 66px;
       opacity    : 0;
-      .transition(all .3s ease-in-out);
+      transition : all .3s ease-in-out;
       &.visible {
         visibility : visible;
         opacity    : 1;
@@ -196,21 +191,7 @@
         background : #343434;
         border     : 0;
         cursor     : pointer;
-        .transition(all .3s ease-out);
-        &::before {
-          position    : absolute;
-          top         : 50%;
-          left        : 50%;
-          width       : 18px;
-          height      : 18px;
-          margin      : -10px 0 0 -10px;
-          text-align  : center;
-          font-size   : 18px;
-          display     : block;
-          text-indent : 0;
-          color       : @white-color;
-          line-height : 20px;
-        }
+        transition : all .3s ease-out;
       }
     }
   }
@@ -233,7 +214,7 @@
     height     : 0;
     overflow   : hidden;
     z-index    : 9;
-    .transition(all .25s ease-out);
+    transition : all .25s ease-out;
     .clearfix();
     .right {
       background-color : #f4f4f4;
@@ -255,32 +236,30 @@
             float            : left;
             width            : 45px;
             line-height      : 48px;
-            text-indent      : -23em;
+            height           : 48px;
             background-color : #f4f4f4;
             overflow         : hidden;
-            .transition(all .25s ease-out);
+            transition       : all .25s ease-out;
+            svg.icon {
+              position : absolute;
+              top      : 50%;
+              left     : 50%;
+              width    : 20px;
+              height   : 20px;
+              margin   : -10px 0 0 -10px;
+              color    : #313131;
+            }
             &.active {
               background-color : #343434;
+              svg.icon {
+                color : white;
+              }
               &::before {
                 color : @white-color;
               }
             }
             &:hover {
               opacity : .75;
-            }
-            &::before {
-              position    : absolute;
-              top         : 50%;
-              left        : 50%;
-              width       : 20px;
-              height      : 20px;
-              margin      : -10px 0 0 -10px;
-              text-align  : center;
-              font-size   : 18px;
-              display     : block;
-              text-indent : 0;
-              color       : #313131;
-              line-height : 20px;
             }
             &.icon-th {
               border-right : 1px solid #d2d6d5;
@@ -302,7 +281,7 @@
           border           : 0;
           font-size        : @f-normal-size;
           cursor           : pointer;
-          .transition(all .25s ease-out);
+          transition       : all .25s ease-out;
           span {
             font-family    : @main-font;
             text-transform : uppercase;
@@ -311,12 +290,12 @@
             background-color : #343434;
             color            : #fff;
           }
-          &::before {
-            position    : absolute;
-            top         : 15px;
-            right       : 24px;
-            font-size   : 15px;
-            line-height : normal;
+          svg.icon {
+            position : absolute;
+            top      : 15px;
+            right    : 24px;
+            width    : 15px;
+            height   : 15px;
           }
         }
       }
@@ -393,7 +372,7 @@
           padding    : 0 0 0 15px;
           color      : #a3a3a3;
           background : #3d3d3d;
-          .transition(all .25s ease-out);
+          transition : all .25s ease-out;
           &::before {
             content    : '';
             display    : block;
@@ -403,7 +382,7 @@
             height     : 32px;
             width      : 32px;
             background : #262626;
-            .transition(all .25s ease-out);
+            transition : all .25s ease-out;
           }
           &::after {
             content          : '';
@@ -417,7 +396,7 @@
             border           : solid rgba(0, 0, 0, 0);
             border-top-color : #434343;
             border-width     : 7px 4px;
-            .transition(all .25s ease-out);
+            transition       : all .25s ease-out;
           }
         }
         ul {
@@ -432,7 +411,7 @@
           opacity    : 0;
           visibility : hidden;
           overflow   : auto;
-          .transition(all .25s ease-out);
+          transition : all .25s ease-out;
           li {
             position      : relative;
             line-height   : 40px;
@@ -443,7 +422,7 @@
               padding    : 0 0 0 15px;
               color      : #a3a3a3;
               font-style : normal;
-              .transition(all .25s ease-out);
+              transition : all .25s ease-out;
               &:hover {
                 background : #3d3d3d;
               }
@@ -463,7 +442,7 @@
         list-style  : none;
         float       : left;
         text-indent : -34em;
-        .transition(opacity .25s ease-out);
+        transition  : opacity .25s ease-out;
         &.red {
           background-color : #ec3939;
         }
@@ -532,7 +511,7 @@
         background        : #a6abab;
         -webkit-transform : rotate(45deg);
         transform         : rotate(45deg);
-        .transition(background .25s ease-out);
+        transition        : background .25s ease-out;
       }
       &::after {
         &:extend(#header nav.nav-sidebar .bt-close::before);
