--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/page/music.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/page/music.less
@@ -140,7 +140,7 @@
     -webkit-transform : translate(-50%, -50%);
     -ms-transform     : translate(-50%, -50%);
     transform         : translate(-50%, -50%);
-    .transition(opacity .25s ease-in-out);
+    transition        : opacity .25s ease-in-out;
     &::before {
       content : "\e604"
     }
