--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/style.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/style.less
@@ -8,7 +8,7 @@
   visibility       : hidden;
   opacity          : 0;
   z-index          : 300;
-  .transition(all .25s ease-in-out);
+  transition       : all .25s ease-in-out;
   &.open {
     visibility : visible;
     opacity    : 1;
@@ -28,20 +28,29 @@
     width : 300px;
   }
   .right-toolbar {
-    bottom   : 20px;
-    display  : block;
-    right    : 0;
-    opacity  : 0;
-    position : fixed;
-    .transition(all .5s ease);
-    width    : 62px;
-    z-index  : 90;
+    bottom     : 20px;
+    display    : block;
+    right      : 0;
+    opacity    : 0;
+    position   : fixed;
+    transition : all .5s ease;
+    width      : 62px;
+    z-index    : 90;
     @media only screen and (max-width : 767px) {
       .display-none;
     }
+
     .tooltip-left, [data-tooltip] {
       position : relative;
       display  : inline-block;
+      &.tooltip-goto {
+        & > div {
+          display : none;
+        }
+        .icon-vertical_align_bottom {
+          display : block;
+        }
+      }
       &:hover {
         &::before,
         &::after {
@@ -75,7 +84,7 @@
         -webkit-transition-delay : 0ms;
         -moz-transition-delay    : 0ms;
         transition-delay         : 0ms;
-        .transition(all .3s ease);
+        transition               : all .3s ease;
         .translate3d(0, 0, 0);
       }
       &::after {
@@ -115,25 +124,21 @@
       }
     }
     .tool-icon {
-      background-color : @white-color;
-      border           : 1px solid #ddd;
+      height           : 31px;
+      width            : 31px;
       cursor           : pointer;
       display          : block;
-      height           : 60px;
       margin-top       : 20px;
       opacity          : 0.5;
       position         : relative;
-      .transition(opacity .3s ease);
-      width            : 60px;
+      transition       : opacity .3s ease;
       &:hover {
         opacity : 1;
       }
     }
     .tool-icon {
-      color       : #000;
-      font-size   : 25px;
-      text-align  : center;
-      line-height : 60px
+      color      : #000;
+      text-align : center;
     }
 
   }
@@ -218,7 +223,7 @@
             font-size     : 32px;
             border-bottom : 1px solid #a09f9f;
             margin        : 0 auto 20px;
-            .transition(color .3s ease);
+            transition    : color .3s ease;
             h2 {
 
             }
@@ -284,13 +289,13 @@
 
                   }
                   .thumb-image {
-                    opacity : 1;
-                    .transition(all .5s ease);
-                    width   : 100%;
+                    opacity    : 1;
+                    transition : all .5s ease;
+                    width      : 100%;
                     img {
-                      width  : 100%;
-                      height : auto;
-                      .transition(all .4s ease);
+                      width      : 100%;
+                      height     : auto;
+                      transition : all .4s ease;
                     }
                   }
                   .caption {
@@ -320,7 +325,7 @@
                       text-align    : center;
                       font-size     : 18px;
                       border-radius : 40px;
-                      .transition(all .3s ease);
+                      transition    : all .3s ease;
                       &.web {
                         border : 2px solid #4a6e68;
                         &:hover {
@@ -358,7 +363,7 @@
                       }
                       span {
                         text-transform : uppercase;
-                        .transition(color .3s ease);
+                        transition     : color .3s ease;
                       }
                     }
                   }
@@ -368,7 +373,7 @@
                   margin-top    : 10px;
                   padding       : 5px 20px 10px;
                   text-align    : center;
-                  .transition(border-bottom-color .3s ease);
+                  transition    : border-bottom-color .3s ease;
                   .work-title {
                     margin-bottom : 10px;
                     span {
@@ -493,10 +498,10 @@
             font-weight : bold;
           }
           a.user {
-            display : block;
-            margin  : 0 10px;
-            height  : 32px;
-            .transition(all .3s ease-in-out);
+            display    : block;
+            margin     : 0 10px;
+            height     : 32px;
+            transition : all .3s ease-in-out;
             img {
               display       : inline-block;
               height        : 32px;
@@ -504,7 +509,7 @@
               border-radius : 3px;
               position      : relative;
               left          : 0;
-              .transition(all .3s ease-in-out);
+              transition    : all .3s ease-in-out;
             }
             span.user_name {
               opacity        : 0;
@@ -513,7 +518,7 @@
               vertical-align : middle;
               font-size      : 15px;
               color          : @brand-primary;
-              .transition(all .3s ease-in-out);
+              transition     : all .3s ease-in-out;
             }
             &:hover {
               img {
@@ -546,6 +551,10 @@
         padding    : 15px 10px 15px 10px;
         & > div {
           margin-bottom : 10px;
+          svg.icon {
+            width  : 16px;
+            height : 16px;
+          }
           &:last-child {
             margin-bottom : 0;
           }
@@ -592,8 +601,8 @@
     display : inline-block;;
   }
   &.show--up {
-    opacity : 0;
-    .transition(all 0.7s ease 0s);
+    opacity    : 0;
+    transition : all 0.7s ease 0s;
     .translateY(70px);
     &.stop--sliding {
       opacity : 1;
@@ -639,7 +648,7 @@
 .box-social {
   padding : 35px 0;
   .list-follow {
-    width  : 285px;
+    width  : 300px;
     margin : 0 auto;
     &::after {
       content : '';
@@ -654,10 +663,10 @@
       height       : 31px;
       overflow     : hidden;
       a {
-        width  : 34px;
-        height : 31px;
-        color  : #202121;
-        .transition(all .3s ease-out);
+        display : block;
+        width   : 34px;
+        height  : 31px;
+        color   : #202121;
         i:before {
           font-size   : 32px;
           line-height : 31px;
@@ -672,27 +681,8 @@
         overflow          : inherit;
         -webkit-animation : heartbeat 2.5s infinite;
         animation         : heartbeat 2.5s infinite;
-        &::before,
-        &::after {
-          position                 : absolute;
-          content                  : '';
-          top                      : 0;
-          left                     : 17px;
-          width                    : 17px;
-          height                   : 27px;
-          background               : #e16b8c;
-          border-radius            : 50px 50px 0 0;
-          -webkit-transform        : rotate(-45deg) translateZ(0);
-          transform                : rotate(-45deg) translateZ(0);
-          -webkit-transform-origin : 0 100%;
-          transform-origin         : 0 100%;
-        }
-        &::after {
-          left                     : 0;
-          -webkit-transform        : rotate(45deg) translateZ(0);
-          transform                : rotate(45deg) translateZ(0);
-          -webkit-transform-origin : 100% 100%;
-          transform-origin         : 100% 100%;
+        svg {
+          color : #e16b8c;
         }
       }
     }
