--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/module/content.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/module/content.less
@@ -453,24 +453,12 @@
       .post-thumb {
         margin   : 5px auto 15px;
         overflow : hidden;
-        width    : 430px;
-        @media only screen and (min-width : 768px) and (max-width : 959px) {
-          width : 350px;
-        }
-        @media only screen and (max-width : 479px) {
-          width : 290px;
-        }
+        width    : 100%;
         img {
           display : block;
           height  : auto;
           opacity : .9;
-          width   : 430px;
-          @media only screen and (min-width : 768px) and (max-width : 959px) {
-            width : 350px;
-          }
-          @media only screen and (max-width : 479px) {
-            width : 290px;
-          }
+          width   : 100%;
         }
       }
       .post-meta {
