--- a/wp-content/themes/Lilim-Theme-Wordpress/style.css
+++ b/wp-content/themes/Lilim-Theme-Wordpress/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: Lilim HSR
+Theme Name: Lilim 2017
 Theme URI: http://moe.akibarika.org
 Author: Rika Akiba
 Author URI: http://moe.akibarika.org
 Description: AkibaRika site theme.
-Version: 3.0.2
+Version: 4.0.0
 License: CC BY-NC-SA 4.0
 */
 
