--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/component/icons.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/component/icons.less
@@ -1,8 +1,26 @@
+/* vietnamese */
 @font-face {
-  font-family : "Dosis";
-  font-style  : normal;
-  font-weight : 200;
-  src         : local("Dosis ExtraLight"), local("Dosis-ExtraLight"), url("http://themes.googleusercontent.com/static/fonts/dosis/v1/zuuDDmIlQfJeEM3Uf6kkpvesZW2xOQ-xsNqO47m55DA.woff") format("woff");
+  font-family: 'VT323';
+  font-style: normal;
+  font-weight: 400;
+  src: local('VT323 Regular'), local('VT323-Regular'), url(https://fonts.gstatic.com/s/vt323/v8/hpNOqKrMYVp5zXv_aYAr7oDGDUGfDkXyfkzVDelzfFk.woff2) format('woff2');
+  unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+  font-family: 'VT323';
+  font-style: normal;
+  font-weight: 400;
+  src: local('VT323 Regular'), local('VT323-Regular'), url(https://fonts.gstatic.com/s/vt323/v8/laIvVS86YUITp2VS5LnmsoDGDUGfDkXyfkzVDelzfFk.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'VT323';
+  font-style: normal;
+  font-weight: 400;
+  src: local('VT323 Regular'), local('VT323-Regular'), url(https://fonts.gstatic.com/s/vt323/v8/vB0CfoJ37mvN-Rdp92NUWaCWcynf_cDxXwCLxiixG1c.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
 
 @font-face {
@@ -40,13 +58,13 @@
 }
 
 .icon {
-  display      : inline-block;
-  width        : 100%;
-  height       : 31px;
-  stroke-width : 0;
-  stroke       : currentColor;
-  fill         : currentColor;
-  transition   : all .3s ease-out;
+  position: relative;
+  display: inline-block;
+  width: auto;
+  height: 14px;
+  fill: #202121;
+  transform: translate(0,0);
+  transition: all .3s ease-in-out;
 }
 
 .icon-twitter {
