--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/component/scaffold.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/component/scaffold.less
@@ -1,108 +1,108 @@
 * {
-  margin                  : 0;
-  padding                 : 0;
-  text-shadow             : 0 0 1px rgba(0, 0, 0, 0.1);
-  -moz-box-sizing         : border-box;
-  -webkit-box-sizing      : border-box;
-  box-sizing              : border-box;
-  -webkit-font-smoothing  : subpixel-antialiased;
-  -moz-osx-font-smoothing : grayscale;
+  margin: 0;
+  padding: 0;
+  text-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: grayscale;
   &::before,
   &::after {
-    -moz-box-sizing    : border-box;
-    -webkit-box-sizing : border-box;
-    box-sizing         : border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
   }
 }
 
 h3, h4 {
-  margin : 1.5em 0 .5em;
+  margin: 1.5em 0 .5em;
 }
 
 h3 {
-  font-size   : 1.5em;
-  line-height : 1.3;
+  font-size: 1.5em;
+  line-height: 1.3;
 }
+
 .cb {
-  -moz-box-sizing    : content-box;
-  -webkit-box-sizing : content-box;
-  -webkit-box-sizing : content-box;
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
 }
 
 .fading {
-  opacity : 0.1 !important;
+  opacity: 0.1 !important;
 }
 
 ::selection {
-  background : @brand-primary;
-  color      : @white-color;
+  background: @brand-primary;
+  color: @white-color;
 }
 
 ::-moz-selection {
-  background : @brand-primary;
-  color      : @white-color;
+  background: @brand-primary;
+  color: @white-color;
 }
 
 body {
-  background  : none repeat scroll 0 0 #eee;
-  color       : #333;
-  font-family : @main-font;
-  font-size   : @f-small-size;
-  position    : relative;
-  margin      : 0 auto;
+  background: none repeat scroll 0 0 #eee;
+  color: #333;
+  font-family: @main-font;
+  font-size: @f-small-size;
+  position: relative;
+  margin: 0 auto;
   &.header-fixed {
-    padding-top : 115px;
     #menu-mobile {
-      top : 0px;
+      top: 0;
     }
     #header {
-      position : fixed;
-      top      : -48px;
-      left     : 0;
-      width    : 100%;
-      z-index  : 999;
+      position: fixed;
+      top: -48px;
+      left: 0;
+      width: 100%;
+      z-index: 999;
     }
   }
 }
 
 a {
-  color           : #333;
-  cursor          : pointer;
-  text-decoration : none;
+  color: #333;
+  cursor: pointer;
+  text-decoration: none;
 }
 
 blockquote {
-  background-color : #f3e077;
-  position         : relative;
-  color            : #484019;
-  padding          : 40px 25px 30px;
-  margin-bottom    : 20px;
-  margin-left      : -25px;
-  margin-right     : -25px;
+  background-color: #f3e077;
+  position: relative;
+  color: #484019;
+  padding: 40px 25px 30px;
+  margin-bottom: 20px;
+  margin-left: -25px;
+  margin-right: -25px;
   p {
-    display : inline;
+    display: inline;
   }
   &::before {
-    position              : absolute;
-    content               : 'Note :';
-    left                  : 0;
-    top                   : 0;
-    padding               : 3px 10px;
-    color                 : #fafafa;
-    font-size             : 15px;
-    background            : rgba(0, 0, 0, 0.2);
-    -webkit-border-radius : 1px 0 1px 0;
-    -moz-border-radius    : 1px 0 1px 0;
-    border-radius         : 1px 0 1px 0;
+    position: absolute;
+    content: 'Note :';
+    left: 0;
+    top: 0;
+    padding: 3px 10px;
+    color: #fafafa;
+    font-size: 15px;
+    background: rgba(0, 0, 0, 0.2);
+    -webkit-border-radius: 1px 0 1px 0;
+    -moz-border-radius: 1px 0 1px 0;
+    border-radius: 1px 0 1px 0;
   }
 }
 
 pre {
-  white-space : pre-wrap;
-  white-space : -moz-pre-wrap;
-  white-space : -pre-wrap;
-  white-space : -o-pre-wrap;
-  word-wrap   : break-word;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
 }
 
 [class^="icon-"] {
@@ -118,63 +118,88 @@ pre {
 }
 
 .left {
-  float : left;
+  float: left;
 }
 
 .right {
-  float : right;
+  float: right;
 }
 
 .icon-twitter:hover {
-  color : #00a0d1;
+  color: #00a0d1;
 }
 
 .icon-weibo:hover {
-  color : #eb182c;
+  color: #eb182c;
 }
 
 .icon-flickr:hover {
-  color : #ff0084;
+  color: #ff0084;
 }
 
 .icon-googleplus:hover {
-  color : #db4a39;
+  color: #db4a39;
 }
 
 .icon-instagram:hover {
-  color : #634d40;
+  color: #634d40;
 }
 
 .icon-foursquare:hover {
-  color : #25a0ca;
+  color: #25a0ca;
 }
 
 button, html input[type="button"], input[type="reset"], input[type="submit"] {
-  -webkit-appearance : button;
-  cursor             : pointer;
+  -webkit-appearance: button;
+  cursor: pointer;
 }
 
 .c-ripple {
-  position   : absolute;
-  top        : 0;
-  left       : 0;
-  width      : 100%;
-  height     : 100%;
-  overflow   : hidden;
-  background : transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: transparent;
+}
+
+.pull-left {
+  float: left;
+}
+
+.pull-right {
+  float: right;
 }
 
 .c-ripple__circle {
-  position      : absolute;
-  top           : 50%;
-  left          : 50%;
-  transform     : translate(-50%, -50%);
-  opacity       : 0;
-  width         : 0;
-  height        : 0;
-  border-radius : 50%;
-  background    : rgba(255, 255, 255, .25);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  width: 0;
+  height: 0;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, .25);
   .c-ripple.is-active & {
-    animation : a-ripple .4s ease-in;
+    animation: a-ripple .4s ease-in;
+  }
+}
+
+.overlay-content {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 100;
+  transition: all .3s ease-in-out;
+  &.show {
+    opacity: 1;
+    visibility: visible;
   }
 }
