--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
@@ -27,6 +27,7 @@ License: CC BY-NC-SA 4.0
 @import "module/footer";
 @import "module/menu";
 @import "module/nav";
+@import "module/common";
 @import "module/content";
 @import "module/comment";
 @import "page/share";
