--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/module/header.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/module/header.less
@@ -45,12 +45,25 @@
       svg {
         width: 14px;
         height: 14px;
-        top: -1px;
-        vertical-align: middle;
+        position: absolute;
+        top: 50%;
+        right: 23px;
+        transform: translateY(-50%);
+        @media (min-width: @screen-sm) {
+          position: relative;
+          top: -1px;
+          right: inherit;
+          vertical-align: middle;
+          transform: translateY(0);;
+        }
       }
     }
     &--login {
       padding: 0;
+      display: none;
+      @media (min-width: @screen-sm) {
+        display: block;
+      }
       a {
         position: relative;
         display: inline-block;
@@ -77,13 +90,16 @@
   }
   &__menu {
     float: left;
-    min-width: 115px;
-    height: 70px;
+    width: 65px;
     border-right: 1px solid #e6eaea;
     color: #202121;
     cursor: pointer;
     overflow: hidden;
     transition: all .3s ease-in-out;
+    @media (min-width: @screen-sm) {
+      min-width: 115px;
+      height: 70px;
+    }
     &:hover {
       opacity: .75;
     }
@@ -96,6 +112,10 @@
     }
     & > span {
       text-transform: uppercase;
+      display: none;
+      @media (min-width: @screen-sm) {
+        display: inline-block;
+      }
     }
   }
   &__right {
@@ -109,15 +129,19 @@
     display: flex;
     justify-content: space-between;
     position: absolute;
+    left: 0;
+    width: 100%;
     top: 0;
-    left: 115px;
-    width: calc(~"100% - 115px");
     height: 70px;
     border-bottom: 1px solid #e6eaea;
     background-color: #f4f7f6;
     font-weight: 300;
     z-index: 2;
     transition: all .3s ease-in-out;
+    @media (min-width: @screen-sm) {
+      left: 115px;
+      width: calc(~"100% - 115px");
+    }
     &.show {
       opacity: 1;
       visibility: visible;
@@ -142,6 +166,12 @@
         display: flex;
         align-items: center;
         width: 100%;
+        .ico-search {
+          display: none;
+          @media (min-width: @screen-sm) {
+            display: block;
+          }
+        }
       }
       svg {
         height: 14px;
@@ -154,14 +184,20 @@
       position: relative;
       width: 66px;
       height: 70px;
-      background-color: #202121;
+      background-color: transparent;
       cursor: pointer;
       z-index: 1;
       transition: all .3s ease-in-out;
+      @media (min-width: @screen-sm) {
+        background-color: #202121;
+      }
       &::after, &::before {
-        background: white;
+        background: #202121;
         right: 22px;
         width: 20px;
+        @media (min-width: @screen-sm) {
+          background: white;
+        }
       }
     }
   }
