--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/module/header.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/module/header.less
@@ -57,10 +57,28 @@
           transform: translateY(0);;
         }
       }
+      .text {
+        visibility: hidden;
+        opacity: 0;
+        margin-left: 8px;
+        transition: all .3s ease-in-out;
+        .header--fixed & {
+          visibility: visible;
+          opacity: 1;
+        }
+      }
     }
     &--login {
+      position: relative;
+      width: 190px;
+      height: 70px;
       padding: 0;
+      overflow: hidden;
+      transition: width .3s ease-in-out;
       display: none;
+      .header.header--fixed & {
+        width: 66px;
+      }
       @media (min-width: @screen-sm) {
         display: block;
       }
@@ -84,6 +102,32 @@
           font-weight: 500;
           position: relative;
           z-index: 1;
+        }
+      }
+      &__wrapper {
+        opacity: 0;
+        visibility: hidden;
+        position: absolute;
+        top: 0;
+        left: 0;
+        float: left;
+        width: 100%;
+        height: 70px;
+        background: @brand-primary;
+        text-align: center;
+        cursor: pointer;
+        z-index: 2;
+        transition: all .3s ease-in-out;
+        .header.header--fixed & {
+          opacity: 1;
+          visibility: visible;
+          svg {
+            top: -1px;
+            height: 17px;
+            width: 17px;
+            fill: #fff;
+            vertical-align: middle;
+          }
         }
       }
     }
