--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/module/header.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/module/header.less
@@ -62,9 +62,11 @@
         opacity: 0;
         margin-left: 8px;
         transition: all .3s ease-in-out;
-        .header--fixed & {
-          visibility: visible;
-          opacity: 1;
+        @media (min-width: @screen-sm) {
+          .header--fixed & {
+            visibility: visible;
+            opacity: 1;
+          }
         }
       }
     }
