--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/style.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/style.less
@@ -184,7 +184,7 @@
         }
         h2 {
           color: #a09f9f;
-          font-size: 32px;
+          font-size: @f-large-size*2;
           position: relative;
           text-align: center;
           width: 300px;
@@ -220,7 +220,7 @@
           }
           .content-title {
             color: #a09f9f;
-            font-size: 32px;
+            font-size: @f-large-size * 2;
             border-bottom: 1px solid #a09f9f;
             margin: 0 auto 20px;
             transition: color .3s ease;
@@ -276,8 +276,6 @@
                     .caption {
                       opacity: 1;
                       .translateY(0);
-                      -webkit-transition: -webkit-transform 0.4s, opacity 0.1s;
-                      -moz-transition: -moz-transform 0.4s, opacity 0.1s;
                       transition: transform 0.4s, opacity 0.1s;
                     }
                     .thumb-image {
@@ -286,7 +284,6 @@
                         .translateY(-50px);
                       }
                     }
-
                   }
                   .thumb-image {
                     opacity: 1;
@@ -308,11 +305,7 @@
                     opacity: 0;
                     padding: 10px;
                     position: absolute;
-                    -webkit-backface-visibility: hidden;
-                    -moz-backface-visibility: hidden;
                     backface-visibility: hidden;
-                    -webkit-transition: -webkit-transform 0.4s, opacity 0.1s 0.3s;
-                    -moz-transition: -moz-transform 0.4s, opacity 0.1s 0.3s;
                     transition: transform 0.4s, opacity 0.1s 0.3s;
                     .translateY(100%);
                     .button {
@@ -323,7 +316,7 @@
                       height: 30px;
                       line-height: 26px;
                       text-align: center;
-                      font-size: 18px;
+                      font-size: @f-xl-size;
                       border-radius: 40px;
                       transition: all .3s ease;
                       &.web {
@@ -383,7 +376,7 @@
                   }
                   .sub {
                     color: #666;
-                    font-size: 11px;
+                    font-size: @f-small-size - 1;
                   }
                 }
               }
@@ -516,7 +509,7 @@
               display: inline-block;
               margin: 0 0 5px 5px;
               vertical-align: middle;
-              font-size: 15px;
+              font-size: @f-normal-size + 1;
               color: @brand-primary;
               transition: all .3s ease-in-out;
             }
@@ -539,7 +532,7 @@
       .post-time {
         color: #ccc;
         display: block;
-        font-size: small;
+        font-size: @f-small-size;
         font-weight: 500;
         margin: 5px 0 30px 0;
         text-align: center;
