Updated post share section

--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/page/share.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/page/share.less
@@ -51,6 +51,11 @@ a.share-button {
   z-index     : 9;
   font-size   : 30px;
   line-height : 30px;
+  svg {
+    width: 32px;
+    fill: white;
+    height: 32px;
+  }
 }
 
 .share-items {
@@ -60,7 +65,9 @@ a.share-button {
   .share-item {
     display : inline-block;
     svg.icon {
-      height : 16px;
+      width: 25px;
+      fill: white;
+      height: 20px;
     }
   }
 }
