Added dark theme version 0.1

--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/component/variables.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/component/variables.less
@@ -18,6 +18,10 @@
 @white-color: #fff;
 @light-color: #fafafa;
 @purple-color: #967adc;
+@dark-color: #3A3A3A;
+@darker-color: #2b2b2b;
+@border-color-dark: #434343;
+@text-color-dark: #ADADAD;
 
 @format-status-color: #742e34;
 @format-aside-color: #5c4942;
