--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/component/form.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/component/form.less
@@ -2,83 +2,146 @@ input:focus,
 select:focus,
 textarea:focus,
 button:focus {
-  outline : none;
+  outline: none;
 }
 
 .rika-textfield {
-  position  : relative;
-  font-size : 16px;
-  width     : 100%;
-  margin    : 0;
-  padding   : 20px 0;
+  position: relative;
+  font-size: 16px;
+  width: 100%;
+  margin: 0;
+  padding: 20px 0;
+
   input {
-    border        : none;
-    border-bottom : 1px solid rgba(0, 0, 0, .12);
-    display       : inline-block;
-    font-size     : 16px;
-    margin        : 0;
-    padding       : 4px 0;
-    width         : 100%;
-    background    : 16px;
-    text-align    : left;
-    color         : inherit;
+    border: none;
+    border-bottom: 1px solid rgba(0, 0, 0, .12);
+    display: inline-block;
+    font-size: 16px;
+    margin: 0;
+    padding: 4px 0;
+    width: 100%;
+    background: 16px;
+    text-align: left;
+    color: inherit;
+
     &.is-filled {
       & + label {
-        opacity    : 0;
-        visibility : hidden;
+        opacity: 0;
+        visibility: hidden;
       }
     }
+
     &:focus,
     &:active {
-      outline : none;
+      outline: none;
+
       & + label.comment-label {
-        top        : 4px;
-        font-size  : 12px;
-        color      : @brand-primary;
-        visibility : visible;
-        opacity    : 1;
+        top: 4px;
+        font-size: 12px;
+        color: @brand-primary;
+        visibility: visible;
+        opacity: 1;
+
         &:after {
-          visibility : visible;
-          left       : 0;
-          width      : 100%;
+          visibility: visible;
+          left: 0;
+          width: 100%;
         }
       }
     }
   }
+
   label.comment-label {
-    bottom         : 0;
-    color          : rgba(0, 0, 0, .26);
-    font-size      : 15px;
-    left           : 0;
-    right          : 0;
-    pointer-events : none;
-    position       : absolute;
-    top            : 24px;
-    width          : 100%;
-    overflow       : hidden;
-    white-space    : nowrap;
-    text-align     : left;
-    transition     : top .2s ease-in-out;
+    bottom: 0;
+    color: rgba(0, 0, 0, .26);
+    font-size: 15px;
+    left: 0;
+    right: 0;
+    pointer-events: none;
+    position: absolute;
+    top: 24px;
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-align: left;
+    transition: top .2s ease-in-out;
+
     &::after {
-      background-color : @brand-primary;
-      bottom           : 20px;
-      content          : '';
-      height           : 2px;
-      left             : 45%;
-      position         : absolute;
-      visibility       : hidden;
-      width            : 10px;
-      transition       : all .2s ease-in-out;
+      background-color: @brand-primary;
+      bottom: 20px;
+      content: '';
+      height: 2px;
+      left: 45%;
+      position: absolute;
+      visibility: hidden;
+      width: 10px;
+      transition: all .2s ease-in-out;
     }
   }
+
   textarea {
     &:extend(.rika-textfield input all);
-    height     : 50px;
-    transition : height .2s ease-in-out;
-    .placeholder({ font-size : 15px; color : rgba(0, 0, 0, .26); });
+    height: 50px;
+    transition: height .2s ease-in-out;
+    .placeholder({
+      font-size: 15px;
+      color: rgba(0, 0, 0, .26);
+    });
+
     &:focus,
     &:active {
-      height : 150px;
+      height: 150px;
     }
+  }
+}
+
+.input-check-toggle {
+  display: inline-block;
+  position: relative;
+  width: 46px;
+  height: 25px;
+  top: 4px;
+  float: right;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  input {
+    display: none;
+
+    &:checked + label {
+      background: @brand-primary;
+
+      .ball {
+        -webkit-transform: translateX(1px);
+        transform: translateX(1px);
+      }
+    }
+  }
+
+  label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #707070;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .ball {
+    position: relative;
+    top: 1px;
+    display: block;
+    background: #fff;
+    border-radius: 50%;
+    width: 23px;
+    height: 23px;
+    -webkit-transform: translateX(22px);
+    transform: translateX(22px);
+    transition: all 0.3s ease;
   }
 }
