Fixed some bugs

--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/mixins/mixins.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/mixins/mixins.less
@@ -6,6 +6,7 @@
 @import "vendor-prefixes";
 @import "trangles";
 @import "placeholder";
+@import "_dark-theme";
 
 .display(@var) {
   display : @var;
