--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/module/content.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/module/content.less
@@ -515,13 +515,12 @@
       padding: 30px 20px 35px
     }
     .not-found {
-      background-color: @white-color;
+      background-color: transparent;
       display: block;
       width: 100%;
+      text-align: center;
       img {
         margin: 0 auto;
-        padding-left: 120px;
-        vertical-align: middle;
         @media only screen and (min-width: 768px) and (max-width: 959px) {
           height: auto;
           padding-left: 0;
